# nhc2-coco

./: .gitignore  README.md  pyproject.toml
nhc2_coco/: __init__.py  coco.py  coco_device_class.py  coco_discover.py  coco_discover_profiles.py  coco_entity.py  coco_fan.py  coco_ip_by_mac.py  coco_light.py  coco_login_validation.py  coco_profiles.py  coco_shutter.py  coco_switch.py  const.py  helpers.py  shutter.json  test.discover.py  test.discover_profiles.py
nhc2_coco/tests/: credentials_example.py  discover_profiles_by_host.py  test_example.py
